Change CashOperRegister and WorkplaceRest test